feat: merge API

--- a/package.json
+++ b/package.json
@@ -104,6 +104,10 @@
         "start:bin": "node ./bin/pm2t",
         "start:ts": "ts-node ./src/binaries/CLI",
         "dev": "ts-node ./src/binaries/CLI",
+        "debug": "node inspect -r ts-node/register ./src/binaries/CLI",
+        "dev0": "node ./lib2/binaries/CLI",
+        "format": "eslint . --ext ts --fix",
+        "lint": "eslint . --ext ts",
         "type-check": "tsc -p tsconfig.types.json --noEmit",
         "build:lib": "babel src --out-dir lib2 --extensions \".js,.ts,.tsx\"",
         "build": "npm run clean:build && npm run build:lib",
