--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
         "type-check": "tsc -p tsconfig.types.json --noEmit",
         "build:lib": "babel src --out-dir lib2 --extensions \".js,.ts,.tsx\"",
         "build": "npm run clean:build && npm run build:lib",
+        "release": "semantic-release",
         "test": "bash test/unit.sh && bash test/e2e.sh"
     },
     "keywords": [
@@ -219,9 +220,16 @@
         "@babel/plugin-transform-runtime": "^7.11.5",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
+        "@semantic-release/exec": "^5.0.0",
+        "@semantic-release/github": "^7.2.1",
+        "@semantic-release/npm": "^7.1.1",
         "@types/node": "^14.11.8",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
         "babel-plugin-module-resolver": "^4.0.0",
+        "eslint": "^8.0.1",
         "mocha": "^7.1.0",
+        "semantic-release": "^17.4.2",
         "should": "^13",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.3"
