--- a/package.json
+++ b/package.json
@@ -180,8 +180,6 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.11.2",
-        "pm2t-io-agent": "~1.0.4",
-        "pm2t-io-apm": "~4.3.5",
         "@pm2/js-api": "~0.6.0",
         "@pm2/pm2-version-check": "latest",
         "async": "~3.2.0",
@@ -203,8 +201,10 @@
         "pm2-axon": "4.0.0",
         "pm2-axon-rpc": "0.6.0",
         "pm2-deploy": "~1.0.2",
-        "pm2t-deploy": "~1.0.3",
         "pm2-multimeter": "^0.1.2",
+        "pm2t-deploy": "~1.0.3",
+        "pm2t-io-agent": "~1.0.4",
+        "pm2t-io-apm": "~4.3.5",
         "promptly": "^2",
         "ps-list": "6.3.0",
         "rimraf": "^3.0.2",
@@ -220,16 +220,16 @@
         "@babel/plugin-transform-runtime": "^7.11.5",
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-typescript": "^7.10.4",
-        "@semantic-release/exec": "^5.0.0",
-        "@semantic-release/github": "^7.2.1",
-        "@semantic-release/npm": "^7.1.1",
+        "@semantic-release/exec": "^6.0.1",
+        "@semantic-release/gitlab": "^7.0.3",
+        "@semantic-release/npm": "^8.0.0",
         "@types/node": "^14.11.8",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "babel-plugin-module-resolver": "^4.0.0",
         "eslint": "^8.0.1",
         "mocha": "^7.1.0",
-        "semantic-release": "^17.4.2",
+        "semantic-release": "^18.0.0",
         "should": "^13",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.3"
@@ -238,11 +238,11 @@
         "systeminformation": "^4.23.3"
     },
     "bugs": {
-        "url": "https://github.com/Unitech/pm2/issues"
+        "url": "https://github.com/hoangnguyen1247/pm2t/issues"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/Unitech/pm2.git"
+        "url": "git+https://github.com/hoangnguyen1247/pm2t.git"
     },
     "license": "AGPL-3.0"
 }
