--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "lint": "eslint . --ext ts --ext js",
         "type-check": "tsc -p tsconfig.types.json --noEmit",
         "build:lib": "babel src --out-dir lib --extensions \".js,.ts,.tsx\"",
-        "build": "npm run clean:build && npm run build:lib",
+        "build": "npm run clean:build && npm run build:lib && npm run copy:src",
+        "copy:src": "node ./CopyNonTsFiles.js",
         "release": "semantic-release",
         "test": "bash test/unit.sh && bash test/e2e.sh"
     },
@@ -101,6 +102,7 @@
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
         "babel-plugin-module-resolver": "^4.0.0",
+        "copy-dir": "^1.3.0",
         "eslint": "^8.0.1",
         "mocha": "^7.1.0",
         "semantic-release": "^18.0.0",
